fix for scrollbox overflow on wrong axis

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -385,7 +385,7 @@ label.error {
 /**
  * jQuery Scroll Styles
  */
-.scroll-pane { overflow-y: scroll; width: 99%; }
+.scroll-pane { overflow-x: scroll; overflow-y: hidden; width: 99%; }
 .scroll-content { width: 2440px; float: left; }
 .scroll-content-item { width: 100px; height: 100px; float: left; margin: 10px; font-size: 3em; line-height: 96px; text-align: center; }
 .scroll-bar-wrap { clear: left; padding: 0 4px 0 2px; margin: 0 -1px -1px -1px; }
